[package]
name = "pteron38-blackpill-keyberon"
version = "0.1.0"
edition = "2021"

[dependencies]
stm32f4xx-hal = { version = "0.10", features = ["rt", "stm32f401", "usb_fs"] }
cortex-m = "0.7"
cortex-m-rt = { version = "0.6", features = ["device"] }
panic-halt = "0.2.0"
keyberon = { git = "https://github.com/TeXitoi/keyberon", rev = "29e960e7ca0a1f79196e441a4abd65a7d9f79ea5" }
cortex-m-rtic = "1.0"
usb-device = "0.2.0"

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = false

[profile.dev]
lto = true
incremental = true
opt-level = "s"
debug = true
